--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.2-Beta2 
  	- Fixed truncated names on tool-tip text (Thx Patrik)
  	- Fixed a few more Search snafu's that caused it to not remember
		what you had selected after performing a search (Thx Rubin)
  	- Fixed ordering of playlist m3u generation
  	- Fixed ratings images to use Javascript hotness (Thx burnsides)
  	- Fixed a catalog update bug that was introduced when I switched 
		over to vauth. 
	- Fixed some minor Local Play display/consistency issues (Thx Morgan)
  	- Fixed disable/enable functions which were incorrectly referencing
		session variables to check for permission (always failed)
  	- Fixed lack of default amazon web url which prevented searching
		from working at all if you had not updated your config 
		file
  	- Fixed read_config so that it loads faster, removed ~1500 
		preg_match calls per page (Thx XGizzmo)
  	- Rewrote entire Flag method, this includes the edit functionality
	- Fixed play selected on playlists, it no longer always plays
		everything. 
  	- Fixed redirection after applying a rating to an album
  	- Fixed a few typos in the xmlrpc code and playlists and fixed the
		weird skipping when seeking using some players (Thx Sven)
  	- Fixed a problem with the Image Resize code which wasn't correctly
		detecting the lack of GD causing no art to be displayed
  	- Fixed Remember Me button (part of the vauth)
  	- Added new Session Handling code called vauth (Vollmer's Auth)
  	- Moved xml-rpc server file to /server/xmlrpc.server.php keeping 
		with the location of the ajax server mojo.. This will 
		break compatiblity with previous versions, sorry!
  	- Added ability to search from non-us amazon webservices website