@@ -30,15 +30,18 @@ if (preg_match($subject,$_SERVER['HTTP_HOST'])) {
 ?>
 <br /><br />
 <p align="center">
-	<a href="http://www.ampache.org"><img src="<?php echo  conf('web_path');
-	 ?><?php echo conf('theme_path'); ?>/images/ampache.gif" title="<?php echo conf('site_title'); ?>" border="0" alt="Ampache" />
+	<a href="http://www.ampache.org"><img src="<?php echo  conf('web_path'); ?><?php echo conf('theme_path'); ?>/images/ampache.gif" title="<?php echo conf('site_title'); ?>" border="0" alt="Ampache" />
 	</a>
 </p>
 <form name="login" method="post" enctype="multipart/form-data" action="<?php echo  conf('web_path'); ; ?>/login.php" style="Display:inline">
 <table class="login" bgcolor="<?php echo conf('base_color2'); ?>" border="0" align="center">
 <tr>
-	<td align="center" colspan="2"><?php echo  conf('login_message'); ; ?>&nbsp;</td>
-</tr>
+	<td align="center" colspan="2">
+	<?php echo  conf('login_message'); ; ?>&nbsp;
+	<?php $GLOBALS['error']->print_error('general'); ?>
+	</td>
+
+	</tr>
 <tr>
 	<td><?php echo  _("Login"); ; ?>:</td>
 	<td><input type="text" name="username" value="<?php echo  $_REQUEST['username']; ; ?>" /></td>
@@ -75,9 +78,4 @@ if ($show_copyright == 1) { ?>
 			All Rights Reserved, Copyright &copy; 2006<br />
 		</font>
 	</p>
-<?php } // end if ($show_copyright == 1)
-if (isset($auth['error'])) { ?>
-	<p align="center">
-		<font color="red"><?php echo trim($auth['error']); ?></font>
-	</p>
-<?php } // end if (isset($auth['error'])) ?>
+<?php } // end if ($show_copyright == 1) ?>
